Changes for 1.0.0

 - [NTP-286] fixed processin of event log records more then 1KB (Sasha)
 - [NTP-269] fixed error when save trigger with '-' in item key (Vedmak)
 - [NTP-225] fixed processing of functions with parameters containing back-slashes (Sasha)
 - [NTP-193,ZBX-2417] fixed timeout handling for passive checks on agent side (Sasha)
 - [NTD-98] fixed regular expression tester giving wrong result for "Character string not included" expressions (Vedmak)
 - [NTP-200] fixed sending active items multiple times because of zbx_tcp_recv() timeout (asaveljevs,Sasha)
 - [NTP-194] fixed compilation under Solaris and FreeBSD (Sasha)
 - [NTD-95] fixed macro expansion in item names in notification messages (asaveljevs)
 - [NTP-90,ZBX-1777] fixed evaluating of the maintenance periods (Sasha)
 - [NTP-96] fixed error when create new element on map (Vedmak)
 - [NTP-87] fixed performance of iregexp(), regexp() and str() functions (Sasha)
 - [NTP-93] fixed error when remote command host contain spaces (Vedmak)
 - [NTP-92] fixed date input in history screen (Vedmak)
 - [NTP-76] fixed deletion of web items when host is deleted (Vedmak)
 - [ZBX-1184] fixed support of more than 10 CPU's for system.cpu.util under Linux (Sasha)
 - [ZBX-1384] fixed memory leak in processing ldap checks (Sasha)
 - [NTP-70] fixed incorrect processing of the same log and eventlog entries (Dmitry)
 - [NTP-66] fixed illegal values in eventlog fields for non eventlog items (Sasha)
 - [NTP-72] fixed wrong trigger expression generation for log items (Vedmak)
 - [NTP-68] fixed trigger values change creating expression via trigger wizard (Vedmak)
 - [ZBX-1032] fixed security vulnerability in processing of net.tcp.listen under FreeBSD and Solaris agents (Sasha)
 - [ZBX-1050] fixed possible windows agent crash while processing big eventlog records (Sasha)
 - [NTP-59] fixed wrong history links in latest data (Vedmak)
 - [NTP-56] fixed bug with refresh when 2+ log files added in monitoring->latest data (Vedmak)