@@ -21,6 +21,6 @@
 #define ZABBIX_BASE64_H
 
 void	str_base64_encode(const char *p_str, char *p_b64str, int in_size);
-void	str_base64_decode(const char *p_b64str, char *p_str, int *p_out_size);
+int	str_base64_decode(const char *p_b64str, char *p_str, int p_str_size);
 
 #endif /* ZABBIX_BASE64_H */
