@@ -1,5 +1,6 @@
 Changes for 1.0.0
 
+ - [NTP-286] fixed processin of long values on server side (Sasha)
  - [NTP-286] fixed processin of event log records more then 1KB (Sasha)
  - [NTP-269] fixed error when save trigger with '-' in item key (Vedmak)
  - [NTP-225] fixed processing of functions with parameters containing back-slashes (Sasha)
